syntax = "proto3";

package vincenzo.member;

option java_package = "com.vincenzo.grpc.member";
option java_outer_classname = "MemberProto";
option java_multiple_files = true;

// 회원 서비스
service MemberService {
  // 회원 조회
  rpc GetMember(GetMemberRequest) returns (GetMemberResponse);
  
  // 캐시포인트 조회
  rpc GetCashPoint(GetCashPointRequest) returns (GetCashPointResponse);
  
  // 캐시포인트 차감
  rpc DeductCashPoint(DeductCashPointRequest) returns (DeductCashPointResponse);
  
  // 캐시포인트 환불
  rpc RefundCashPoint(RefundCashPointRequest) returns (RefundCashPointResponse);
}

// 회원 조회 요청
message GetMemberRequest {
  int64 member_id = 1;
}

// 회원 조회 응답
message GetMemberResponse {
  bool success = 1;
  string message = 2;
  Member member = 3;
}

// 캐시포인트 조회 요청
message GetCashPointRequest {
  int64 member_id = 1;
}

// 캐시포인트 조회 응답
message GetCashPointResponse {
  bool success = 1;
  string message = 2;
  double balance = 3;
}

// 캐시포인트 차감 요청
message DeductCashPointRequest {
  int64 member_id = 1;
  double amount = 2;
  string transaction_id = 3;
}

// 캐시포인트 차감 응답
message DeductCashPointResponse {
  bool success = 1;
  string message = 2;
  double remaining_balance = 3;
}

// 캐시포인트 환불 요청
message RefundCashPointRequest {
  int64 member_id = 1;
  double amount = 2;
  string transaction_id = 3;
}

// 캐시포인트 환불 응답
message RefundCashPointResponse {
  bool success = 1;
  string message = 2;
  double new_balance = 3;
}

// 회원 정보
message Member {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string name = 4;
  double cashpoint_balance = 5;
  string status = 6;
}
